# fri-binius

./: Cargo.toml  readme.md
.VSCodeCounter/2025-01-30_16-00-47/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-01-30_20-05-36/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-01-31_01-06-54/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
docs/: plan.md
src/: lib.rs  main.rs  prover.rs  tests.rs  verifier.rs
src/utils/: channel.rs  code.rs  merkle.rs  mle.rs  mod.rs
